--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!-- This web page is copied by "https://bazhan.wang" --><!-- This web page is copied by "https://bazhan.wang" --><html lang="en"><head><meta name="360-analysis-id" content="302u1c2z312u2q"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><meta charset="utf-8"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><meta name="360-analysis-id" content="2y352v1d1h361c2v"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
-    
+
     <title>💥新年快乐💥</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
@@ -1070,16 +1069,13 @@
 		
         function wishFun() {
             const wish = [
-				"新年快乐",
+				"雨柔，新年快乐",
 				"Happy  New  Year",
-				"愿新的一年里",
-				"你的梦想如同盛开的花朵",
-				"绚烂绽放",
-				"愿你的幸福如星辰璀璨",
-				"熠熠生辉",
-				"祝新年快乐",
-				"万事如意",
-				
+				"愿你在新的一年里",
+				"朝朝皆胜意",
+				"暮暮皆温柔",
+				"烟火向星辰",
+				"所愿皆成真！",
             ]
 
             const text = document.getElementById('wish_text');
@@ -1147,12 +1143,10 @@
         }
         function start() {
             const text = [
-				'新年好！',
-				'新元肇启，华章日新。',
-				'2024，忽焉已至。',
-				'2023这一年，',
-				'我们一起经历了春的朝气，夏的炎热，秋的收获，冬的静美，',
-				'值此新春佳节，',
+				'新年好呀！',
+				'2024这一年的故事很简单',
+				'但 遇见你 让故事的结尾变得分外美好',
+				'我们2025的故事也一定会 ',
 				'祝我们在新的一年健康成长，快乐无忧，学业进步！',
             ]
             let str = text.join('<br><br>')
