--- a/index.html
+++ b/index.html
@@ -1145,9 +1145,10 @@
             const text = [
 				'新年好呀！',
 				'2024这一年的故事很简单',
-				'但 遇见你 让故事的结尾变得分外美好',
-				'我们2025的故事也一定会 ',
-				'祝我们在新的一年健康成长，快乐无忧，学业进步！',
+				'但 遇见你 让2024的收场变得分外美好',
+				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
+				'新年快乐！',
+		                '这句话希望以后每一年的今天都可以给你说❤',
             ]
             let str = text.join('<br><br>')
             let str_ = ''
