--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
 				"朝朝皆胜意",
 				"暮暮皆温柔",
 				"烟火向星辰",
-				"所愿皆成真！",
+				"所愿皆成真",
             ]
 
             const text = document.getElementById('wish_text');
@@ -1148,7 +1148,7 @@
 				'但 遇见你 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
-		                '这句话希望以后每一年的今天都可以给你说❤',
+		                '希望这句话以后每一年的今天都可以给你说哈哈❤',
             ]
             let str = text.join('<br><br>')
             let str_ = ''
