--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 
     <title>💥新年快乐💥</title>
 
+</head>
+<body>
     <nav class="navbar">
     <div class="navbar-content-1">
         <a href="https://blog.csdn.net/qq_40693171">&nbsp;&nbsp;&nbsp;</a>
