--- a/index.html
+++ b/index.html
@@ -1224,14 +1224,14 @@
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
 
 <!DOCTYPE html>
-<html lang="❤">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Example</title>
 </head>
 <body>
-    <button onclick="location.href='https://baidu.com';" style="background: none; border: none; color: blue; text-decoration: underline; cursor: pointer;">跳转</button>
+    <button onclick="location.href='https://baidu.com';" style="background: none; border: none; color: blue; text-decoration: underline; cursor: pointer;">❤</button>
 </body>
 </html>
 
