--- a/index.html
+++ b/index.html
@@ -1222,5 +1222,30 @@
         // jump2()
         window.onpageshow = jump2
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>跳转按钮示例</title>
+    <style>
+        /* 按钮样式 */
+        button {
+            background: transparent;
+            border: none;
+            font-size: 3em;
+            color: #fff;
+            cursor: pointer;
+            text-shadow: 2px 2px 8px #FF0000;
+        }
+    </style>
+</head>
+<body>
+    <!-- 跳转按钮 -->
+    <button id="jumpBtn" onclick="window.location.href='https://www.baidu.com';">
+        ❤
+    </button>
+</body>
+</html>
 
 </body><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫--></html><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
