--- a/index.html
+++ b/index.html
@@ -1166,6 +1166,10 @@
         }
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
 
+<!-- 原始的 ❤ 改为按钮 -->
+<button id="jumpBtn" style="background: transparent; border: none; font-size: 3em; color: #fff; cursor: pointer; text-shadow: 2px 2px 8px #FF0000;" onclick="window.location.href='https://www.example.com';">
+    ❤
+</button>
 
     <script type="text/javascript">
         function a(e) {
