--- a/index.html
+++ b/index.html
@@ -1,6 +1,30 @@
 
     <title>💥新年快乐💥</title>
 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="css/maze.css">
+
+</head>
+<body>
+<nav class="navbar">
+    <div class="navbar-content-1">
+        <a href="https://blog.csdn.net/qq_40693171">&nbsp;&nbsp;&nbsp;</a>
+    </div>
+    <div class=" container navbar-content">
+        <a href="https://blog.csdn.net/qq_40693171">女神</a>
+        <a href="https://juejin.im/user/5c944a8bf265da6102098c31">520</a>
+        <a href="https://github.com/javasmall">快乐</a>
+        <a href="https://github.com/javasmall">bigsai的祝福</a>
+
+    </div>
+    <div class="navbar-content-2">
+        <a >66</a>
+    </div>
+</nav>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <meta name="mobile-web-app-capable" content="yes"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <meta name="apple-mobile-web-app-capable" content="yes"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
