--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
 				'但 遇见你 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
-		                '希望这句话以后每一年的今天都可以给你说哈哈❤',
+		                '希望这句话以后每一年的今天都可以给你说哈哈<button style="background:none;border:none;color:inherit;padding:0;margin:0;cursor:pointer" onclick="jumpToDouyin()">❤</button>',
             ]
             let str = text.join('<br><br>')
             let str_ = ''
@@ -1164,6 +1164,9 @@
                 }
             }, 100)
         }
+	     function jumpToDouyin() {
+        window.location.href = 'https://www.douyin.com/';
+    }
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
 
 
