--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,19 @@
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script src="js/script.js"></script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script>
-		
+	<script src="js/jquery.min.js" type="text/javascript"></script>
+    <script>
+        var shouci = true;
+        console.log(shouci);
+        function bodyPlayMusic() {
+            if (shouci) {
+                shouci = false;
+                audio.play();
+                console.log(shouci);
+            }
+        };
+    </script>
+    <script>	
         function wishFun() {
             const wish = [
 				"雨柔，新年快乐",
@@ -1145,7 +1157,7 @@
             const text = [
 				'新年好呀！',
 				'2024这一年的故事很简单',
-				'但 遇见你 让2024的收场变得分外美好',
+				'但 <button id="meetYouBtn" style="border: none; background: none; color: inherit; cursor: pointer;">遇见你</button> 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
 		                '希望这句话以后每一年的今天都可以给你说哈哈❤',
@@ -1165,7 +1177,16 @@
             }, 100)
         }
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const meetYouBtn = document.getElementById('meetYouBtn');
+            if (meetYouBtn) {
+                meetYouBtn.addEventListener('click', function () {
+                    window.location.href = 'https://www.douyin.com';
+                });
+            }
+        });
+    </script>
 
     <script type="text/javascript">
         function a(e) {
