--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                 }
             }, 100)
         }
-    </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+    </script>‬‏‎‭‪‏‬‏‫‫‬‫‫
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const meetYouBtn = document.getElementById('meetYouBtn');
