--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
             }
 
         }
-    </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+    </script>‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏
     <script type="text/javascript">
         window.onhashchange = function () {
             jp();
