--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 opacity: 0;
             }
         }
-    </style><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+    </style>
     <script src="js/jquery.min.js" type="text/javascript"></script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script>
         var shouci = true;
@@ -1157,7 +1157,7 @@
             const text = [
 				'新年好呀！',
 				'2024这一年的故事很简单',
-				'但 <button id="meetYouBtn" style="border: none; background: none; color: inherit; cursor: pointer;">遇见你</button> 让2024的收场变得分外美好',
+				'但<button onclick="window.open(\'https://www.douyin.com/\')">遇见你</button> 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
 		                '希望这句话以后每一年的今天都可以给你说哈哈❤',
@@ -1177,17 +1177,6 @@
             }, 100)
         }
     </script>‬‏‎‭‪‏‬‏‫‫‬‫‫
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const meetYouBtn = document.getElementById('meetYouBtn');
-            if (meetYouBtn) {
-                meetYouBtn.addEventListener('click', function () {
-                    window.location.href = 'https://www.douyin.com';
-                });
-            }
-        });
-    </script>
-
     <script type="text/javascript">
         function a(e) {
             var f = document.createElement('iframe');
