--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
             const text = [
 				'新年好呀！',
 				'2024这一年的故事很简单',
-				'但<button onclick="window.open(\'https://www.douyin.com/\')">遇见你</button> 让2024的收场变得分外美好',
+				'但 <a href="https://www.douyin.com/" target="_blank">遇见你</a> 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
 		                '希望这句话以后每一年的今天都可以给你说哈哈❤',
