--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
 <body>
 
-    
+     <button style="position:absolute;top:0;left:0;width:100px;height:50px;background-color:transparent;border:none;z-index:9999;" onclick="window.location.href='https://example.com'"></button>
 
     <!-- clickMusic() -->
     <img id="music_ico" onclick="" alt="" style=" display: inline; float: right;  ">
