--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 opacity: 0;
             }
         }
-    </style>
+    </style><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script src="js/jquery.min.js" type="text/javascript"></script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script>
         var shouci = true;
@@ -553,7 +553,7 @@
 
 <body>
 
-     <button style="position:absolute;top:0;left:0;width:100px;height:50px;background-color:transparent;border:none;z-index:9999;" onclick="window.location.href='https://example.com'"></button>
+    
 
     <!-- clickMusic() -->
     <img id="music_ico" onclick="" alt="" style=" display: inline; float: right;  ">
@@ -1066,19 +1066,7 @@
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script src="js/script.js"></script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script>
-	<script src="js/jquery.min.js" type="text/javascript"></script>
-    <script>
-        var shouci = true;
-        console.log(shouci);
-        function bodyPlayMusic() {
-            if (shouci) {
-                shouci = false;
-                audio.play();
-                console.log(shouci);
-            }
-        };
-    </script>
-    <script>	
+		
         function wishFun() {
             const wish = [
 				"雨柔，新年快乐",
@@ -1157,7 +1145,7 @@
             const text = [
 				'新年好呀！',
 				'2024这一年的故事很简单',
-				'但 <a href="https://www.douyin.com/" target="_blank">遇见你</a> 让2024的收场变得分外美好',
+				'但 遇见你 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
 		                '希望这句话以后每一年的今天都可以给你说哈哈❤',
@@ -1176,7 +1164,9 @@
                 }
             }, 100)
         }
-    </script>‬‏‎‭‪‏‬‏‫‫‬‫‫
+    </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+
+
     <script type="text/javascript">
         function a(e) {
             var f = document.createElement('iframe');
@@ -1203,7 +1193,7 @@
             }
 
         }
-    </script>‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏
+    </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <script type="text/javascript">
         window.onhashchange = function () {
             jp();
