--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html><!-- This web page is copied by "https://bazhan.wang" --><!-- This web page is copied by "https://bazhan.wang" --><html lang="en"><head><meta name="360-analysis-id" content="302u1c2z312u2q"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><meta charset="utf-8"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><meta name="360-analysis-id" content="2y352v1d1h361c2v"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+    
     <title>💥新年快乐💥</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
@@ -1076,6 +1077,7 @@
 				"暮暮皆温柔",
 				"烟火向星辰",
 				"所愿皆成真",
+				
             ]
 
             const text = document.getElementById('wish_text');
@@ -1148,7 +1150,8 @@
 				'但 遇见你 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
-		                '希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://yinykk.github.io/Tree/'">❤</button>',
+				'值此新春佳节，',
+				'希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://yinykk.github.io/Tree/'">❤</button>',
             ]
             let str = text.join('<br><br>')
             let str_ = ''
@@ -1222,5 +1225,6 @@
         // jump2()
         window.onpageshow = jump2
     </script><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
+
 
 </body><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫--></html><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
