--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
 				'值此新春佳节，',
-				'希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://yinykk.github.io/Tree/'">❤</button>',
+				'希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://yinykk.github.io/'">❤</button>',
             ]
             let str = text.join('<br><br>')
             let str_ = ''
