--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@
 				'但 遇见你 让2024的收场变得分外美好',
 				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
 				'新年快乐！',
-				'希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://github.com/YinYkk/Tree\'">❤</button>',
+				'希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://YinYkk.github.io/Tree\'">❤</button>',
             ]
             let str = text.join('<br><br>')
             let str_ = ''
