--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!-- This web page is copied by "https://bazhan.wang" --><!-- This web page is copied by "https://bazhan.wang" --><html lang="en"><head><meta name="360-analysis-id" content="302u1c2z312u2q"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><meta charset="utf-8"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><meta name="360-analysis-id" content="2y352v1d1h361c2v"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     
-    <title>💥新年快乐💥</title>
+    <title>💥小钰，生日快乐！💥</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
     <meta name="mobile-web-app-capable" content="yes"><!--!‭‪‪‬‏‪‫‬‪‬‏‏‭‪‫‬‏‪‬‎‬--><!--!‬‏‎‭‪‏‬‏‫‫‬‫‫‬‏‭‫‪‫‬‪‬‏‫-->
@@ -1070,9 +1070,9 @@
 		
         function wishFun() {
             const wish = [
-				"雨柔，新年快乐",
-				"Happy  New  Year",
-				"愿你在新的一年里",
+				"小钰，生日快乐！",
+				"Happy  birthday！",
+				"愿你在新的一岁里",
 				"朝朝皆胜意",
 				"暮暮皆温柔",
 				"烟火向星辰",
@@ -1145,12 +1145,7 @@
         }
         function start() {
             const text = [
-				'新年好呀！',
-				'2024这一年的故事很简单',
-				'但 遇见你 让2024的收场变得分外美好',
-				'2025的故事一定也会满是盎然生机，五彩斑斓哈哈',
-				'新年快乐！',
-				'希望这句话以后每一年的今天都可以给你说哈哈<button style="border:none; background:none; color: inherit; font-family: inherit; font-size: inherit; cursor: pointer;" onclick="window.location.href=\'https://YinYkk.github.io/Tree1\'">❤</button>',
+				
             ]
             let str = text.join('<br><br>')
             let str_ = ''
